examples/test/testpolicy7757.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7757
  namespace: namespace293
spec:
  podSelector:
    matchLabels:
      key33: value5
      key22: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value49
          key11: value16
      podSelector:
        matchLabels:
          key12: value38
